--- a/src/components/Playlists/Playlists.css
+++ b/src/components/Playlists/Playlists.css
@@ -3,3 +3,8 @@
     grid-template-columns: repeat(3, minmax(0, 1fr));
     grid-gap: 10px;
 }
+.playlist-music-container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+}
