--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -3,3 +3,9 @@
     grid-template-columns: repeat(3, minmax(0, 1fr));
     grid-gap: 20px;
 }
+
+@media screen and (max-width: 992px) {
+    .all-music-container{
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
