added some changes in playlist to fix the responsiveness

--- a/src/components/Playlists/Playlists.css
+++ b/src/components/Playlists/Playlists.css
@@ -12,3 +12,9 @@
 .button-border{
     border-style: none;
 }
+
+@media screen and (max-width: 992px) {
+    .button-container{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
